importe dde logo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,4 +35,16 @@ body {
 #container h1{
     font-size: 20px;
 
+} 
+
+#img-container{
+ display: inline-block;  
+ margin-right: 5px; 
+}
+
+
+img {
+    margin-top: 5px;
+    width: 20px;
+
 }
