--- a/css/estilos.css
+++ b/css/estilos.css
@@ -36,3 +36,24 @@ body {
     font-size: 20px;
 
 }
+
+footer{
+    margin: 0;
+}
+
+#footer-container{
+    
+    color: white;
+    margin: 0 auto;
+    width: 77%;
+    background-color: grey;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+#footer-p{
+    margin-top: 0;
+    padding: 5px;
+    text-align: center;
+    font-size: 16p;
+}
